<resources>
    <string name="app_name">MVVM_Aplication</string>
    <string name="field_is_required">Field is required</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="request_error_try_again">There was an error when sending the request. Please try again later</string>
    <string name="second_app_name" translatable="false">GAMEIX</string>
    <string name="description_app">The best of the gaming world</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">I already have an account?</string>
    <string name="login">Login</string>
    <string name="sign_up_with">Or Sign up with</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="please_enter_details">Please enter your details</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="latest_games">The latest games and genres \nare here</string>
    <string name="email_address" translatable="false">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="i_agree">I agree to the</string>
    <string name="terms_and_services">Terms and services</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>