<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <TextView
        android:id="@+id/name"
        style="@style/AuthTitle"
        android:layout_width="0dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back"
        style="@style/BackButton"
        android:layout_marginStart="0dp"
        app:layout_constraintBottom_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@id/name" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/lets_get_started"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"/>

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/latest_games"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userName"
        style="@style/AuthorizationInputLayout"
        android:layout_marginTop="64dp"
        android:hint="@string/full_name"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userNameText"
        style="@style/AuthorizationEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/AuthorizationInputLayout"
        android:layout_marginTop="32dp"
        android:hint="@string/email_address"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            style="@style/AuthorizationEditText"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/AuthorizationInputLayout"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            style="@style/AuthorizationEditText"
            android:inputType="textPassword"
            android:maxLength="20"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/agree"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/password"/>

    <TextView
        android:id="@+id/linkText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/i_agree"
        android:textSize="14sp"
        android:layout_marginStart="8dp"
        android:textColor="@color/light_gray"
        app:layout_constraintTop_toTopOf="@id/agree"
        app:layout_constraintStart_toEndOf="@id/agree"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        style="@style/AuthButton"
        android:text="@string/sign_up"
        android:layout_marginTop="40dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linkText"/>

</androidx.constraintlayout.widget.ConstraintLayout>