<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".presentation.authorization.AuthorizationActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:src="@drawable/ic_gamepad"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:text="@string/second_app_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:text="@string/description_app"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        style="@style/AuthButton"
        android:text="@string/sign_up"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"/>

    <LinearLayout
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/haveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_gray"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/have_account"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_blue_accent"
            android:layout_marginStart="4dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/login"/>

    </LinearLayout>

    <View
        android:id="@+id/lineDeviderLeft"
        style="@style/Divider"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signUpWith"
        app:layout_constraintTop_toBottomOf="@id/alreadyHaveAccount"/>

    <TextView
        android:id="@+id/signUpWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/sign_up_with"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/lineDeviderLeft"
        app:layout_constraintBottom_toBottomOf="@id/lineDeviderLeft"/>

    <View
        android:id="@+id/lineDeviderRight"
        style="@style/Divider"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/signUpWith"
        app:layout_constraintTop_toTopOf="@id/lineDeviderLeft"
        app:layout_constraintBottom_toBottomOf="@id/lineDeviderLeft"/>

    <ImageView
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_google"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toStartOf="@id/apple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpWith"/>

    <ImageView
        android:id="@+id/apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_apple"
        app:layout_constraintEnd_toStartOf="@id/facebook"
        app:layout_constraintStart_toEndOf="@id/google"
        app:layout_constraintTop_toTopOf="@id/google"/>

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/apple"
        app:layout_constraintStart_toEndOf="@id/apple" />

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>