<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".presentation.authorization.AuthorizationActivity">

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/login_input"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Login"-->
<!--        android:layout_marginTop="20dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/login_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:inputType="textEmailAddress"/>-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/password_input"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Password"-->
<!--        app:layout_constraintTop_toBottomOf="@id/login_input"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/password_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:inputType="textPassword" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/login_button"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:text="Login"-->
<!--        app:layout_constraintTop_toBottomOf="@id/password_input"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/email_register_layout"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Email"-->
<!--        android:layout_marginTop="30dp"-->
<!--        app:layout_constraintVertical_bias="1"-->
<!--        app:layout_constraintTop_toBottomOf="@id/login_button"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/email_register_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:inputType="textEmailAddress" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/password_register_layout"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Password"-->
<!--        app:layout_constraintVertical_bias="1"-->
<!--        app:layout_constraintTop_toBottomOf="@id/email_register_layout"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/password_register_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:inputType="textEmailAddress" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/repeat_password_register_layout"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Repeat Password"-->
<!--        app:layout_constraintVertical_bias="1"-->
<!--        app:layout_constraintTop_toBottomOf="@id/password_register_layout"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/repeat_password_register_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:inputType="textEmailAddress" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/userName_register_layout"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="User Name"-->
<!--        app:layout_constraintVertical_bias="1"-->
<!--        app:layout_constraintTop_toBottomOf="@id/repeat_password_register_layout"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/userName_register_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:inputType="textEmailAddress" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->



<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/register_button"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:text="Register"-->
<!--        app:layout_constraintTop_toBottomOf="@id/userName_register_layout"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:src="@drawable/ic_gamepad"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:text="@string/second_app_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:text="@string/description_app"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        style="@style/AuthButton"
        android:text="@string/sign_up"
        android:layout_marginTop="72dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"/>

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <View
        android:id="@+id/lineDeviderLeft"
        style="@style/Divider"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signUpWith"
        app:layout_constraintTop_toBottomOf="@id/alreadyHaveAccount"/>

    <TextView
        android:id="@+id/signUpWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/sign_up_with"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/lineDeviderLeft"
        app:layout_constraintBottom_toBottomOf="@id/lineDeviderLeft"/>

    <View
        android:id="@+id/lineDeviderRight"
        style="@style/Divider"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/signUpWith"
        app:layout_constraintTop_toTopOf="@id/lineDeviderLeft"
        app:layout_constraintBottom_toBottomOf="@id/lineDeviderLeft"/>

    <ImageView
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_google"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toStartOf="@id/apple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpWith"/>

    <ImageView
        android:id="@+id/apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_apple"
        app:layout_constraintEnd_toStartOf="@id/facebook"
        app:layout_constraintStart_toEndOf="@id/google"
        app:layout_constraintTop_toTopOf="@id/google"/>

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/apple"
        app:layout_constraintStart_toEndOf="@id/apple" />

</androidx.constraintlayout.widget.ConstraintLayout>